Dark theme support

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/kaushan_script"
-            android:textColor="@color/white"
+            android:textColor="#F1F1F1"
             android:textSize="50dp"
             android:text="OnlineGo "
             android:layout_gravity="center_horizontal"
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:hint="Username"
-                android:textColor="@color/white"
+                android:textColor="#FFFFFF"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,9 +72,9 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="Password"
-                android:textColor="@color/white"
-                android:textColorHighlight="@color/white"
-                android:textColorHint="@color/white"
+                android:textColor="#FFFFFF"
+                android:textColorHighlight="#FFFFFF"
+                android:textColorHint="#FFFFFF"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="@string/login_to_ogs"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/loginText"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/button_shape_default_rounded"
             app:spinning_bar_color="@color/colorPrimary"
@@ -126,7 +126,7 @@
             tools:visibility="visible"
             android:background="@drawable/button_shape_default_rounded"
             android:layout_marginTop="4dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/loginText"
             />
         <Button
             android:id="@+id/facebookSignInButton"
@@ -137,7 +137,7 @@
             tools:visibility="visible"
             android:background="@drawable/button_shape_default_rounded"
             android:layout_marginTop="4dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/loginText"
             />
         <TextView
             android:id="@+id/noAccountView"
