--- a/app/src/main/res/drawable/ic_cancel.xml
+++ b/app/src/main/res/drawable/ic_cancel.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="24.0">
     <group android:rotation="45" android:pivotX="12" android:pivotY="12">
         <path
-            android:fillColor="#FFFFFFFF"
+            android:fillColor="@color/buttonEnabled"
             android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
     </group>
 </vector>
