--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         >
         <androidx.appcompat.widget.Toolbar
@@ -24,14 +25,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
-                android:layout_gravity="right">
+                android:layout_gravity="right"
+                >
 
                 <TextView
                     android:id="@+id/logo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/kaushan_script"
-                    android:textColor="@color/white"
+                    android:textColor="@color/headerPrimary"
                     android:textSize="26sp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +43,7 @@
                     android:id="@+id/titleView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
+                    android:textColor="@color/headerPrimary"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -68,7 +70,7 @@
                     android:scaleType="fitXY"
                     android:padding="10dp"
                     android:background="?android:selectableItemBackground"
-                    android:tint="@color/white"
+                    android:tint="@color/headerPrimary"
                     />
                 <TextView
                     android:id="@+id/chatBadge"
@@ -93,7 +95,7 @@
                 <ImageView
                     android:id="@+id/notificationsButton"
                     app:srcCompat="@drawable/ic_go_board"
-                    android:tint="@color/white"
+                    android:tint="@color/headerPrimary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
@@ -151,7 +153,7 @@
         style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
         app:mpb_useIntrinsicPadding="false"
         app:layout_constraintBottom_toBottomOf="@id/appbar"
-        app:mpb_indeterminateTint="@color/white"
+        app:mpb_indeterminateTint="@color/headerPrimary"
         android:elevation="4dp"
         android:visibility="gone"
         />
@@ -160,8 +162,8 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemIconTint="@drawable/navigation_selector_color"
-        app:itemTextColor="@drawable/navigation_selector_color"
+        app:itemIconTint="@color/colorTextSecondary"
+        app:itemTextColor="@color/colorTextSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:elevation="4dp"
         app:menu="@menu/menu_main"
