--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:maxHeight="150dp"
     >
 
@@ -17,17 +18,24 @@
 
     <View
         android:id="@+id/colorIndicatorWhite"
+        android:layout_width="6dp"
+        android:layout_height="match_parent"
+        android:background="@color/whiteStones"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <View
+        android:id="@+id/stoneColorSeparator"
         android:layout_width="1px"
         android:layout_height="match_parent"
         android:layout_marginLeft="6dp"
-        android:background="@color/black"
+        android:background="@color/buttonEnabled"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/iconContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="15dp"
         app:cardElevation="2dp"
         android:layout_marginTop="4dp"
@@ -86,7 +94,7 @@
             android:layout_weight="1"
             android:gravity="left"
             android:maxLines="1"
-            android:textColor="@color/colorTextSecondary"
+            android:textColor="@color/playerDetailsText"
             android:textSize="14sp"
             tools:text="MrAlex"
             android:textStyle="bold"
