--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,33 +1,28 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">#212121</item>
+        <item name="android:textColor">@color/colorText</item>
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/colorOffWhite</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
-`
-    <style name="LoginLabel">
+
+    <style name="LoginLabel" >
         <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">#99FFFFFF</item>
+        <item name="android:textColorHint">#F1F1F1</item>
         <item name="android:textSize">20sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorAccent">@color/white</item>
-        <item name="colorControlNormal">#99FFFFFF</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorAccent">#F1F1F1</item>
+        <item name="colorControlNormal">#F1F1F1</item>
+        <item name="colorControlActivated">#F1F1F1</item>
 
-    </style>
-
-    <style name="BlueButton" parent="ThemeOverlay.AppCompat">
-        <!--<item name="colorAccent">#303F9F</item>-->
-        <item name="colorAccent">@color/colorPrimaryDark</item>
     </style>
 
     <style name="LoginActivity" parent="Theme.AppCompat.Light.DarkActionBar">
