Dark theme: removed 'white' from theme-dependant colors; override system theme when Light/Dark is set

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:hint="Email (optional)"
-                android:textColor="@color/white"
+                android:textColor="@color/colorTextBackground"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
