--- a/app/src/main/res/layout/bottom_sheet_new_automatch.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_automatch.xml
@@ -99,7 +99,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:background="@color/colorAccent"
-        android:textColor="@color/whiteStones"
+        android:textColor="@color/white"
         android:textStyle="bold"
         />
 </LinearLayout>
