--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -168,7 +168,7 @@
         app:elevation="4dp"
         app:menu="@menu/menu_main"
         app:labelVisibilityMode="labeled"
-        android:background="@color/white"
+        android:background="@color/colorTextBackground"
         />
 
     <io.zenandroid.onlinego.ui.screens.newchallenge.NewChallengeView
