--- a/app/src/main/res/layout/dialog_messages.xml
+++ b/app/src/main/res/layout/dialog_messages.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="8dp"
-        android:background="@color/white"
+        android:background="@color/colorTextBackground"
         android:elevation="2dp"
         >
         <TextView
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/white"
+        android:background="@color/colorTextBackground"
         android:elevation="10dp"
         >
         <com.google.android.material.textfield.TextInputEditText
