--- a/app/src/main/res/layout/dialog_select_opponent.xml
+++ b/app/src/main/res/layout/dialog_select_opponent.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
+    android:background="@color/colorTextBackground"
     >
 
     <com.google.android.material.tabs.TabLayout
