--- a/app/src/main/res/layout/item_active_game_card.xml
+++ b/app/src/main/res/layout/item_active_game_card.xml
@@ -12,7 +12,7 @@
     android:layout_marginBottom="4dp"
     app:cardElevation="1dp"
     app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/colorTextBackground"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -107,7 +107,7 @@
                 app:layout_constraintTop_toBottomOf="@id/opponent_name"
                 android:text="Your turn"
                 android:background="@drawable/rounded_corners"
-                android:textColor="@color/white"
+                android:textColor="@color/colorTextBackground"
                 android:textSize="10sp"
                 android:fontFamily="@font/ubuntu_bold"
                 android:paddingTop="2dp"
