--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     app:cardElevation="1dp"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/colorTextBackground"
     >
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
