--- a/app/src/main/res/layout/view_chip.xml
+++ b/app/src/main/res/layout/view_chip.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="8dp"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/colorTextBackground"
     app:cardElevation="0dp"
     android:layout_marginRight="4dp"
     android:id="@+id/card"
