--- a/app/src/main/res/layout/view_new_challenge.xml
+++ b/app/src/main/res/layout/view_new_challenge.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:alpha=".85"
         android:visibility="gone"
-        android:background="@color/white"
+        android:background="@color/colorTextBackground"
         android:elevation="5dp"
         android:clickable="true"
         android:focusable="true" />
@@ -26,7 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add"
-        app:tint="@color/white"
+        app:tint="@color/colorTextBackground"
         app:fabSize="normal"
         app:backgroundTint="@color/colorAccent"
         />
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_person_filled"
         app:fabSize="mini"
-        app:tint="@color/white"
+        app:tint="@color/colorTextBackground"
         app:backgroundTint="@color/colorAccent"
         android:visibility="gone"
         tools:visibility="visible"
@@ -74,7 +74,7 @@
         app:layout_constraintBottom_toTopOf="@+id/onlineFab"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_challenge"
-        app:tint="@color/white"
+        app:tint="@color/colorTextBackground"
         app:fabSize="mini"
         app:backgroundTint="@color/colorAccent"
         android:visibility="gone"
