Dark theme: NewGame auto-match and custom buttons moved to primary color

--- a/app/src/main/res/layout/item_new_game.xml
+++ b/app/src/main/res/layout/item_new_game.xml
@@ -39,7 +39,7 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#989898"
+        android:textColor="@color/colorText"
         tools:text="Online"
         android:textSize="12sp"
         android:gravity="center"
