--- a/app/src/main/res/layout/item_learn.xml
+++ b/app/src/main/res/layout/item_learn.xml
@@ -13,8 +13,8 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:background="@drawable/rounded_corners"
-        android:backgroundTint="#2588c9"
-        android:tint="@color/colorTextBackground"
+        android:backgroundTint="@color/headerPrimary"
+        android:tint="@color/headerPrimaryText"
         android:padding="8dp"
         tools:src="@drawable/ic_book"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -74,7 +74,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/titleView"
         app:layout_constraintHorizontal_bias="1"
-        android:textColor="#2588c9"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="14sp"
         android:textStyle="bold"
         />
