--- a/app/src/main/res/layout/item_opponent.xml
+++ b/app/src/main/res/layout/item_opponent.xml
@@ -12,7 +12,7 @@
         android:id="@+id/iconContainer"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:cardBackgroundColor="@color/colorTextBackground"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="20dp"
         app:cardElevation="2dp"
         android:layout_marginTop="4dp"
