--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorText">#F3F3F3</color>
+    <color name="colorActionableText">#389FFF</color>
     <color name="colorTextBackground">#151515</color>
     <color name="colorTextSecondary">#BDBDBD</color>
 
     <color name="loginBackground">@color/colorOffWhite</color>
     <color name="loginText">@color/colorText</color>
 
+    <color name="statusBarColor">@color/colorOffWhite</color>
     <color name="headerPrimary">#424242</color>
     <color name="headerPrimaryText">@color/colorText</color>
 
@@ -16,9 +18,11 @@
     <color name="buttonEnabled">@color/colorText</color>
     <color name="buttonDisabled">#636363</color>
 
-    <color name="colorPrimary">#0E71C8</color>
+    <color name="stoneColorSeparator">@color/colorText</color>
+
+    <color name="colorPrimary">#389FFF</color>
     <color name="colorPrimaryLight">#0E71C8</color>
-    <color name="colorPrimaryDark">@color/colorOffWhite</color>
+    <color name="colorPrimaryDark">#0E71C8</color> <!--//offWhite-->
     <color name="colorAccent">#0E71C8</color>
     <color name="colorOffWhite">#2C2C2C</color>
 
