#22 Dark theme support (#62)
* Dark theme support

* Dark theme support - fixed dialogs

* Dark theme: removed 'white' from theme-dependant colors; override system theme when Light/Dark is set

* Dark theme: fixed "opponent's turn" color bar

* Dark theme: protection against null context on chip dialogs

* Dark theme: NewGame auto-match and custom buttons moved to primary color

* Dark theme: code review changes implemented.

* Dark theme: load correct board texture at startup

* Dark theme: finished review comments;
removed onConfigurationChanged override causing graphical bugs
moved texture file to drawables folder (for night support)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/headerPrimary"
         app:layout_constraintTop_toTopOf="parent"
         >
         <androidx.appcompat.widget.Toolbar
@@ -24,14 +25,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
-                android:layout_gravity="right">
+                android:layout_gravity="right"
+                >
 
                 <TextView
                     android:id="@+id/logo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/kaushan_script"
-                    android:textColor="@color/white"
+                    android:textColor="@color/headerPrimaryText"
                     android:textSize="26sp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +43,7 @@
                     android:id="@+id/titleView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
+                    android:textColor="@color/headerPrimaryText"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -68,7 +70,7 @@
                     android:scaleType="fitXY"
                     android:padding="10dp"
                     android:background="?android:selectableItemBackground"
-                    android:tint="@color/white"
+                    android:tint="@color/headerPrimaryText"
                     />
                 <TextView
                     android:id="@+id/chatBadge"
@@ -93,7 +95,7 @@
                 <ImageView
                     android:id="@+id/notificationsButton"
                     app:srcCompat="@drawable/ic_go_board"
-                    android:tint="@color/white"
+                    android:tint="@color/headerPrimaryText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
@@ -151,7 +153,7 @@
         style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
         app:mpb_useIntrinsicPadding="false"
         app:layout_constraintBottom_toBottomOf="@id/appbar"
-        app:mpb_indeterminateTint="@color/white"
+        app:mpb_indeterminateTint="@color/headerPrimaryText"
         android:elevation="4dp"
         android:visibility="gone"
         />
@@ -166,7 +168,7 @@
         app:elevation="4dp"
         app:menu="@menu/menu_main"
         app:labelVisibilityMode="labeled"
-        android:background="@color/white"
+        android:background="@color/colorTextBackground"
         />
 
     <io.zenandroid.onlinego.ui.screens.newchallenge.NewChallengeView
