--- a/app/src/main/res/layout/item_learn.xml
+++ b/app/src/main/res/layout/item_learn.xml
@@ -13,8 +13,8 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:background="@drawable/rounded_corners"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:tint="@color/white"
+        android:backgroundTint="@color/headerPrimary"
+        android:tint="@color/headerPrimaryText"
         android:padding="8dp"
         tools:src="@drawable/ic_book"
         app:layout_constraintLeft_toLeftOf="parent"
